--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
 @import "tailwindcss";
+@plugin "daisyui" {
+  themes: lofi --default, dark --prefersdark;
+}
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: montserrat, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -24,7 +25,6 @@ body {
 
 #root {
   margin: 0;
-  text-align: center;
   flex: 1;
   display: flex;
   flex-direction: column;
